--- a/templates/blogs-page.html
+++ b/templates/blogs-page.html
@@ -1,35 +1,34 @@
+{% load static %}
 <!DOCTYPE html>
-<html dir="rtl" lang="en">
+<html dir="rtl" lang="fa">
     <head>
-
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="keywords" content="Personal, Portfolio, Creative">
-        <meta name="description" content="Kalvin Portfolio Template">
-        <meta name="author" content="cosmos-themes">
+        <meta name="keywords" content="وبلاگ, مقالات, نوشته ها">
+        <meta name="description" content="وبلاگ شخصی - مقالات و نوشته های من">
+        <meta name="author" content="نت کپی">
 
-        <title>قالب تک صفحه ای رزومه و نمونه کار | نت کپی مرجع قالب و اسکریپت فارسی</title>
+        <title>وبلاگ | نت کپی مرجع قالب و اسکریپت فارسی</title>
 
         <!-- favicon -->
-        <link href="images/favicon.ico" rel="icon" type="image/png">
+        <link href="{% static 'images/favicon.ico' %}" rel="icon" type="image/png">
 
         <!--Font Awesome css-->
-        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 
         <!--Bootstrap css-->
-        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 
         <!--Owl Carousel css-->
-        <link rel="stylesheet" href="css/owl.carousel.min.css">
-        <link rel="stylesheet" href="css/owl.theme.default.min.css">
+        <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
 
         <!--Magnific Popup css-->
-        <link rel="stylesheet" href="css/magnific-popup.css">
+        <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
 
-      
         <!--Site Main Style css-->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
     </head>
 
@@ -43,13 +42,13 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <!-- LOGO -->
-                <a class="navbar-brand logo" href="index.html">
+                <a class="navbar-brand logo" href="{% url 'index' %}">
                     نت کپی
                 </a>
 
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link active">برگشت</a>
+                        <a href="{% url 'index' %}" class="nav-link active">برگشت</a>
                     </li>
                 </ul>
             </div>
@@ -62,22 +61,22 @@
             <div class="banner-caption text-center">
                 <h1>وبلاگ</h1>
                 <div class="bread-crumb mt-10">
-                    <a href="index.html">خانه</a>
+                    <a href="{% url 'index' %}">خانه</a>
                     <a href="#">وبلاگ</a>
                 </div>
             </div>
         </section>
 
         <!--Blog List Section Starts-->
-        <section class="blogs blog-list pt-100 pb-50" data-scroll-index="4">
+        <section class="blogs blog-list pt-100 pb-50">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4 col-md-6">
                         <!--Blogs Item-->
                         <div class="blog-item">
                             <div class="blog-img">
-                                <a href="single-blog.html">
-                                    <img src="images/blog/img-1.jpg" alt="">
+                                <a href="{% url 'single_blog' %}">
+                                    <img src="{% static 'images/blog/img-1.jpg' %}" alt="مقاله اول">
                                 </a>
                             </div>
                             <div class="blog-content">
@@ -85,7 +84,7 @@
                                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است </p>
                                 <div class="blog-meta">
                                     <span class="more">
-                                        <a href="single-blog.html">مطالعه بیشتر</a>
+                                        <a href="{% url 'single_blog' %}">مطالعه بیشتر</a>
                                     </span>
                                     <span class="date">
                                         22 مرداد 1400
@@ -99,8 +98,8 @@
                         <!--Blogs Item-->
                         <div class="blog-item">
                             <div class="blog-img">
-                                <a href="single-blog.html">
-                                    <img src="images/blog/img-2.jpg" alt="">
+                                <a href="{% url 'single_blog' %}">
+                                    <img src="{% static 'images/blog/img-2.jpg' %}" alt="مقاله دوم">
                                 </a>
                             </div>
                             <div class="blog-content">
@@ -108,7 +107,7 @@
                                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است </p>
                                 <div class="blog-meta">
                                     <span class="more">
-                                        <a href="single-blog.html">مطالعه بیشتر</a>
+                                        <a href="{% url 'single_blog' %}">مطالعه بیشتر</a>
                                     </span>
                                     <span class="date">
                                         22 مرداد 1400
@@ -122,8 +121,8 @@
                         <!--Blogs Item-->
                         <div class="blog-item">
                             <div class="blog-img">
-                                <a href="single-blog.html">
-                                    <img src="images/blog/img-3.jpg" alt="">
+                                <a href="{% url 'single_blog' %}">
+                                    <img src="{% static 'images/blog/img-3.jpg' %}" alt="مقاله سوم">
                                 </a>
                             </div>
                             <div class="blog-content">
@@ -131,7 +130,7 @@
                                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است </p>
                                 <div class="blog-meta">
                                     <span class="more">
-                                        <a href="single-blog.html">مطالعه بیشتر</a>
+                                        <a href="{% url 'single_blog' %}">مطالعه بیشتر</a>
                                     </span>
                                     <span class="date">
                                         22 مرداد 1400
@@ -144,8 +143,8 @@
                         <!--Blogs Item-->
                         <div class="blog-item">
                             <div class="blog-img">
-                                <a href="single-blog.html">
-                                    <img src="images/blog/img-4.jpg" alt="">
+                                <a href="{% url 'single_blog' %}">
+                                    <img src="{% static 'images/blog/img-4.jpg' %}" alt="مقاله چهارم">
                                 </a>
                             </div>
                             <div class="blog-content">
@@ -153,30 +152,7 @@
                                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است </p>
                                 <div class="blog-meta">
                                     <span class="more">
-                                        <a href="single-blog.html">مطالعه بیشتر</a>
-                                    </span>
-                                    <span class="date">
-                                        22 مرداد 1400
-                                    </span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-lg-4 col-md-6">
-                        <!--Blogs Item-->
-                        <div class="blog-item">
-                            <div class="blog-img">
-                                <a href="single-blog.html">
-                                    <img src="images/blog/img-5.jpg" alt="">
-                                </a>
-                            </div>
-                            <div class="blog-content">
-                                <h3>لورم ایپسوم متن ساختگی با تولید سادگی </h3>
-                                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است </p>
-                                <div class="blog-meta">
-                                    <span class="more">
-                                        <a href="single-blog.html">مطالعه بیشتر</a>
+                                        <a href="{% url 'single_blog' %}">مطالعه بیشتر</a>
                                     </span>
                                     <span class="date">
                                         22 مرداد 1400
@@ -190,8 +166,8 @@
                         <!--Blogs Item-->
                         <div class="blog-item">
                             <div class="blog-img">
-                                <a href="single-blog.html">
-                                    <img src="images/blog/img-6.jpg" alt="">
+                                <a href="{% url 'single_blog' %}">
+                                    <img src="{% static 'images/blog/img-5.jpg' %}" alt="مقاله پنجم">
                                 </a>
                             </div>
                             <div class="blog-content">
@@ -199,7 +175,30 @@
                                 <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است </p>
                                 <div class="blog-meta">
                                     <span class="more">
-                                        <a href="single-blog.html">مطالعه بیشتر</a>
+                                        <a href="{% url 'single_blog' %}">مطالعه بیشتر</a>
+                                    </span>
+                                    <span class="date">
+                                        22 مرداد 1400
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-4 col-md-6">
+                        <!--Blogs Item-->
+                        <div class="blog-item">
+                            <div class="blog-img">
+                                <a href="{% url 'single_blog' %}">
+                                    <img src="{% static 'images/blog/img-6.jpg' %}" alt="مقاله ششم">
+                                </a>
+                            </div>
+                            <div class="blog-content">
+                                <h3>لورم ایپسوم متن ساختگی با تولید سادگی </h3>
+                                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است </p>
+                                <div class="blog-meta">
+                                    <span class="more">
+                                        <a href="{% url 'single_blog' %}">مطالعه بیشتر</a>
                                     </span>
                                     <span class="date">
                                         22 مرداد 1400
@@ -259,32 +258,31 @@
         <!--Footer End-->
 
         <!--Jquery js-->
-        <script src="js/jquery.min.js"></script>
+        <script src="{% static 'js/jquery.min.js' %}"></script>
         <!--Bootstrap js-->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <!--Stellar js-->
-        <script src="js/jquery.stellar.js"></script>
+        <script src="{% static 'js/jquery.stellar.js' %}"></script>
         <!--Animated Headline js-->
-        <script src="js/animated.headline.js"></script>
+        <script src="{% static 'js/animated.headline.js' %}"></script>
         <!--Owl Carousel js-->
-        <script src="js/owl.carousel.min.js"></script>
+        <script src="{% static 'js/owl.carousel.min.js' %}"></script>
         <!--ScrollIt js-->
-        <script src="js/scrollIt.min.js"></script>
+        <script src="{% static 'js/scrollIt.min.js' %}"></script>
         <!--Isotope js-->
-        <script src="js/isotope.pkgd.min.js"></script>
+        <script src="{% static 'js/isotope.pkgd.min.js' %}"></script>
         <!--Magnific Popup js-->
-        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
         <!--Particles js-->
-        <script src="js/particles.min.js"></script>
+        <script src="{% static 'js/particles.min.js' %}"></script>
         <!--Site Main js-->
-        <script src="js/main.js"></script>
+        <script src="{% static 'js/main.js' %}"></script>
         <script>
             //Particles
-            particlesJS.load('particles-js', 'js/particles.json', function() {
+            particlesJS.load('particles-js', "{% static 'js/particles.json' %}", function() {
                 console.log('callback - particles.js config loaded');
             });
         </script>
 
     </body>
 </html>
-
