--- a/templates/single-blog.html
+++ b/templates/single-blog.html
@@ -1,35 +1,34 @@
+{% load static %}
 <!DOCTYPE html>
-<html dir="rtl" lang="en">
+<html dir="rtl" lang="fa">
     <head>
-
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="keywords" content="Personal, Portfolio, Creative">
-        <meta name="description" content="Kalvin Portfolio Template">
-        <meta name="author" content="cosmos-themes">
+        <meta name="keywords" content="وبلاگ, مقاله, پست, نوشته">
+        <meta name="description" content="مقاله کامل در مورد موضوع مورد نظر">
+        <meta name="author" content="نت کپی">
 
-        <title>قالب تک صفحه ای رزومه و نمونه کار | نت کپی مرجع قالب و اسکریپت فارسی</title>
+        <title>صفحه پست وبلاگ | نت کپی مرجع قالب و اسکریپت فارسی</title>
 
         <!-- favicon -->
-        <link href="images/favicon.ico" rel="icon" type="image/png">
+        <link href="{% static 'images/favicon.ico' %}" rel="icon" type="image/png">
 
         <!--Font Awesome css-->
-        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}">
 
         <!--Bootstrap css-->
-        <link rel="stylesheet" href="css/bootstrap.css">
+        <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 
         <!--Owl Carousel css-->
-        <link rel="stylesheet" href="css/owl.carousel.min.css">
-        <link rel="stylesheet" href="css/owl.theme.default.min.css">
+        <link rel="stylesheet" href="{% static 'css/owl.carousel.min.css' %}">
+        <link rel="stylesheet" href="{% static 'css/owl.theme.default.min.css' %}">
 
         <!--Magnific Popup css-->
-        <link rel="stylesheet" href="css/magnific-popup.css">
+        <link rel="stylesheet" href="{% static 'css/magnific-popup.css' %}">
 
-       
         <!--Site Main Style css-->
-        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="{% static 'css/style.css' %}">
     </head>
 
     <body>
@@ -44,13 +43,13 @@
         <nav class="navbar navbar-expand-lg navbar-dark">
             <div class="container">
                 <!-- LOGO -->
-                <a class="navbar-brand logo" href="index.html">
+                <a class="navbar-brand logo" href="{% url 'index' %}">
                     نت کپی
                 </a>
 
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a href="blogs-page.html" class="nav-link active">برگشت</a>
+                        <a href="{% url 'blog_list' %}" class="nav-link active">برگشت</a>
                     </li>
                 </ul>
             </div>
@@ -63,8 +62,8 @@
             <div class="banner-caption text-center">
                 <h1>صفحه پست وبلاگ</h1>
                 <div class="bread-crumb mt-10">
-                    <a href="index.html">خانه</a>
-                    <a href="blogs-page.html">وبلاگ</a>
+                    <a href="{% url 'index' %}">خانه</a>
+                    <a href="{% url 'blog_list' %}">وبلاگ</a>
                     <a href="#">صفحه</a>
                 </div>
             </div>
@@ -77,7 +76,7 @@
                     <div class="col-lg-8 offset-lg-2">
                         <!--Blog Image-->
                         <div class="blog-image">
-                            <img src="images/blog/blog-big.jpg" alt="">
+                            <img src="{% static 'images/blog/blog-big.jpg' %}" alt="تصویر اصلی مقاله">
                         </div>
                         <!--Blog Heading-->
                         <div class="blog-heading">
@@ -100,7 +99,7 @@
                             <h3 class="comment-title">نظرات</h3>
                             <ul class="post-comment">
                                 <li>
-                                    <img src="images/comment-authors/img-1.jpg" alt="">
+                                    <img src="{% static 'images/comment-authors/img-1.jpg' %}" alt="آدام همتی">
                                     <div class="comment-info">
                                         <h3>آدام همتی</h3>
                                         <a href="#">پاسخ</a>
@@ -109,7 +108,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="images/comment-authors/img-2.jpg" alt="">
+                                    <img src="{% static 'images/comment-authors/img-2.jpg' %}" alt="آدام همتی">
                                     <div class="comment-info">
                                           <h3>آدام همتی</h3>
                                           <a href="#">پاسخ</a>
@@ -118,7 +117,7 @@
                                     </div>
                                 </li>
                                 <li>
-                                    <img src="images/comment-authors/img-3.jpg" alt="">
+                                    <img src="{% static 'images/comment-authors/img-3.jpg' %}" alt="آدام همتی">
                                     <div class="comment-info">
                                           <h3>آدام همتی</h3>
                                           <a href="#">پاسخ</a>
@@ -129,20 +128,21 @@
                             </ul>
                         </div>
                         <!--Blog Comment Form-->
-                        <form class="col-md-12 contact-form" action="#">
+                        <form class="col-md-12 contact-form" method="post" action="{% url 'add_comment' %}">
+                            {% csrf_token %}
                             <h3 class="comment-title">پاسخ دهید</h3>
                             <div class="row">
                                 <!--Name-->
                                 <div class="col-md-6">
-                                    <input class="form-inpt" type="text" required="required" placeholder="نام">
+                                    <input class="form-inpt" type="text" name="name" required placeholder="نام">
                                 </div>
                                 <!--Email-->
                                 <div class="col-md-6">
-                                    <input class="form-inpt" type="text" placeholder="ایمیل" required="required">
+                                    <input class="form-inpt" type="email" name="email" placeholder="ایمیل" required>
                                 </div>
                                 <!--Message-->
                                 <div class="col-md-12">
-                                    <textarea name="form-message" placeholder="نظر شما" rows="8"></textarea>
+                                    <textarea name="message" placeholder="نظر شما" rows="8" required></textarea>
                                 </div>
                                 <div class="col-md-12 text-center pt-30">
                                     <input id="submit" class="main-btn" type="submit" value="ارسال نظر">
@@ -185,6 +185,11 @@
                             <h5>آدرس</h5>
                             <p>ایران،تهران،برج میلاد</p>
                         </div>
+                    <div class="social-icons mt-3">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-instagram"></i></a>
+                        <a href="#"><i class="fa fa-linkedin"></i></a>
                     </div>
                 </div>
                 <div class="row text-center">
@@ -200,33 +205,31 @@
         <!--Footer End-->
 
         <!--Jquery js-->
-        <script src="js/jquery.min.js"></script>
+        <script src="{% static 'js/jquery.min.js' %}"></script>
         <!--Bootstrap js-->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <!--Stellar js-->
-        <script src="js/jquery.stellar.js"></script>
+        <script src="{% static 'js/jquery.stellar.js' %}"></script>
         <!--Animated Headline js-->
-        <script src="js/animated.headline.js"></script>
+        <script src="{% static 'js/animated.headline.js' %}"></script>
         <!--Owl Carousel js-->
-        <script src="js/owl.carousel.min.js"></script>
+        <script src="{% static 'js/owl.carousel.min.js' %}"></script>
         <!--ScrollIt js-->
-        <script src="js/scrollIt.min.js"></script>
+        <script src="{% static 'js/scrollIt.min.js' %}"></script>
         <!--Isotope js-->
-        <script src="js/isotope.pkgd.min.js"></script>
+        <script src="{% static 'js/isotope.pkgd.min.js' %}"></script>
         <!--Magnific Popup js-->
-        <script src="js/jquery.magnific-popup.min.js"></script>
+        <script src="{% static 'js/jquery.magnific-popup.min.js' %}"></script>
         <!--Particles js-->
-        <script src="js/particles.min.js"></script>
+        <script src="{% static 'js/particles.min.js' %}"></script>
         <!--Site Main js-->
-        <script src="js/main.js"></script>
+        <script src="{% static 'js/main.js' %}"></script>
         <script>
             //Particles
-            particlesJS.load('particles-js', 'js/particles.json', function() {
+            particlesJS.load('particles-js', "{% static 'js/particles.json' %}", function() {
                 console.log('particles loaded');
             });
         </script>
 
     </body>
 </html>
-
-
