--- a/templates/APP/index.html
+++ b/templates/APP/index.html
@@ -86,9 +86,9 @@
         data-stellar-background-ratio=".7" data-scroll-index="0">
         <!--Banner Content-->
         <div class="banner-caption">
-            <h1>سلام من نت کپی هستم</h1>
+            <h1>....</h1>
             <p class="cd-headline clip mt-30">
-                <span>مرجع قالب و اسکریپت های فارسی</span><br>
+                <span>پروژه آزمایشی برای مکتبخونه</span><br>
                 <span class="blc">مرجع</span>
                 <span class="cd-words-wrapper">
                     <b class="is-visible">قالب فارسی</b>
@@ -124,14 +124,16 @@
                     <div class="about-content">
                         <div class="about-heading">
                             <h2>درباره من</h2>
-                            <span>مرجع قالب و اسکریپت های فارسی</span>
+                            <span></span>
                         </div>
-                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
-                            چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی
-                            تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد </p>
-                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
-                            چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی
-                            تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد </p>
+                        <p>
+                            سید علی موسوی هستم 
+                            دانشجویه رشته مهندسی کامپیوتر
+                        </p>
+                        <p>
+                            برای دیدن پروژه های  من میتونید به این لینک مراجعه کنید
+                            https://github.com/dashboard
+                        </p>
                         <!--About Social Icons-->
                         <div class="social-icons">
                             <a href="#"><i class="fa fa-facebook"></i></a>
@@ -169,8 +171,7 @@
                             <i class="fa fa-laptop"></i>
                         </span>
                         <h4>طراحی وب</h4>
-                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
-                        </p>
+                       
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -180,20 +181,12 @@
                             <i class="fa fa-gears"></i>
                         </span>
                         <h4>توسعه وب</h4>
-                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
-                        </p>
+                        
                     </div>
                 </div>
                 <div class="col-md-4">
                     <!--Service Item-->
-                    <div class="service-item">
-                        <span class="icon">
-                            <i class="fa fa-mobile"></i>
-                        </span>
-                        <h4>طراحی واکنش گرا</h4>
-                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
-                        </p>
-                    </div>
+                    
                 </div>
                 <div class="col-md-4">
                     <!--Service Item-->
@@ -202,8 +195,7 @@
                             <i class="fa fa-rocket"></i>
                         </span>
                         <h4>برندسازی</h4>
-                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
-                        </p>
+                        
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -213,7 +205,6 @@
                             <i class="fa fa-pencil"></i>
                         </span>
                         <h4>طراحی خلاقانه</h4>
-                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
                         </p>
                     </div>
                 </div>
@@ -224,7 +215,6 @@
                             <i class="fa fa-support"></i>
                         </span>
                         <h4>پشتیبانی</h4>
-                        <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است
                         </p>
                     </div>
                 </div>
@@ -515,50 +505,7 @@
     <!--Blog Section End-->
 
     <!--Testimonials Section Start-->
-    <section class="testimonials pt-100 pb-100"
-        style="background-image: url('{% static 'images/background/testimonials-bg.jpg' %}')">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-10 offset-lg-1">
-                    <div class="owl-carousel owl-theme text-center">
-                        <!--Testimonials Item-->
-                        <div class="testimonial-item">
-                            <div class="author-img">
-                                <img src="{% static 'images/testimonial/img-1.jpg' %}" alt="">
-                            </div>
-                            <h5>آدام همتی</h5>
-                            <span>کارگردان خلاق</span>
-                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-                                است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی
-                                تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد </p>
-                        </div>
-                        <!--Testimonials Item-->
-                        <div class="testimonial-item">
-                            <div class="author-img">
-                                <img src="{% static 'images/testimonial/img-1.jpg' %}" alt="">
-                            </div>
-                            <h5>آدام همتی</h5>
-                            <span>کارگردان خلاق</span>
-                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-                                است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی
-                                تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد </p>
-                        </div>
-                        <!--Testimonials Item-->
-                        <div class="testimonial-item">
-                            <div class="author-img">
-                                <img src="{% static 'images/testimonial/img-1.jpg' %}" alt="">
-                            </div>
-                            <h5>آدام همتی</h5>
-                            <span>کارگردان خلاق</span>
-                            <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک
-                                است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی
-                                تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد </p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+   
     <!--Testimonials Section End-->
 
     <!--Contact Section Start-->
